frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graph-frontend
spec:
  selector:
    app: graph-frontend
  ports:
    - name: oauth
      port: 8443
      targetPort: 8443
