frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: graph-frontend
spec:
  to:
    kind: Service
    name: graph-frontend
  port:
    targetPort: oauth
  tls:
    termination: edge
